feat(nvim): rewrote inlay_hint configuration

--- a/nvim/.gitignore
+++ b/nvim/.gitignore
@@ -1,8 +1,54 @@
-tt.*
-.tests
-doc/tags
-debug
-.repro
-foo.*
-*.log
-data
+/iterm2
+/karabiner
+/yarn
+/lazyvim.bak
+/nvim.bak
+/raycast
+/zed
+/thefuck
+/jo-nvim
+/tmux.bak
+
+#compiled lua sources
+luac.out
+
+# luarocks build files
+*.src.rock
+*.zip
+*.tar.gz
+
+# Object files
+*.o
+*.os
+*.ko
+*.obj
+*.elf
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+*.def
+*.exp
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+
+plugin/packer_compiled.lua
