--- a/tmux/statusline.conf
+++ b/tmux/statusline.conf
@@ -1,18 +1,18 @@
-set -g mode-style "fg=#eee8d5,bg=#073642"
+set -g mode-style "fg=#D6DEEB,bg=#011627"
 
-set -g message-style "fg=#eee8d5,bg=#073642"
-set -g message-command-style "fg=#eee8d5,bg=#073642"
+set -g message-style "fg=#D6DEEB,bg=#011627"
+set -g message-command-style "fg=#D6DEEB,bg=#011627"
 
-set -g pane-border-style "fg=#073642"
-set -g pane-active-border-style "fg=#eee8d5"
+set -g pane-border-style "fg=#637777"
+set -g pane-active-border-style "fg=#FFFFFF"
 
 set -g status "on"
 set -g status-interval 1
 set -g status-justify "left"
 
-set -g status-style "fg=#586e75,bg=#073642"
+set -g status-style "fg=#FFFFFF,bg=#011627"
 
-set -g status-bg "#002b36"
+set -g status-bg "#011627"
 
 set -g status-left-length "100"
 set -g status-right-length "100"
@@ -20,11 +20,11 @@ set -g status-right-length "100"
 set -g status-left-style NONE
 set -g status-right-style NONE
 
-set -g status-left "#[fg=#073642,bg=#eee8d5,bold] #S #[fg=#eee8d5,bg=#93a1a1,nobold,nounderscore,noitalics]#[fg=#15161E,bg=#93a1a1,bold] #(whoami) #[fg=#93a1a1,bg=#002b36]"
-set -g status-right "#[fg=#586e75,bg=#002b36,nobold,nounderscore,noitalics]#[fg=#93a1a1,bg=#586e75]#[fg=#657b83,bg=#586e75,nobold,nounderscore,noitalics]#[fg=#93a1a1,bg=#657b83]#[fg=#93a1a1,bg=#657b83,nobold,nounderscore,noitalics]#[fg=#15161E,bg=#93a1a1,bold] #h "
+set -g status-left "#[fg=#011627,bg=#FFFFFF,bold] #S #[fg=#FFFFFF,bg=#93a1a1,nobold,nounderscore,noitalics]#[fg=#011627,bg=#94a0a1,bold] #(whoami) #[fg=#94a0a1,bg=#011627]"
+set -g status-right "#[fg=#637777,bg=#011627,nobold,nounderscore,noitalics]#[fg=#FFFFFF,bg=#637777]#[fg=#D6DEEB,bg=#637777,nobold,nounderscore,noitalics]#[fg=#FFFFFF,bg=#D6DEEB]#[fg=#FFFFFF,bg=#D6DEEB,nobold,nounderscore,noitalics]#[fg=#011627,bg=#80A4C2,bold] #h "
 
-setw -g window-status-activity-style "underscore,fg=#839496,bg=#002b36"
+setw -g window-status-activity-style "underscore,fg=#C792EA,bg=#011627"
 setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=#839496,bg=#002b36"
-setw -g window-status-format '#[fg=#002b36,bg=#002b36]#[default] #I  #{b:pane_current_path} #[fg=#002b36,bg=#002b36,nobold,nounderscore,noitalics]'
-setw -g window-status-current-format '#[fg=#002b36,bg=#eee8d5]#[fg=#b58900,bg=#eee8d5] #I #[fg=#eee8d5,bg=#b58900] #{b:pane_current_path} #[fg=#b58900,bg=#002b36,nobold]'
+setw -g window-status-style "NONE,fg=#D6DEEB,bg=#011627"
+setw -g window-status-format '#[fg=#011627,bg=#011627]#[default] #I  #{b:pane_current_path} #[fg=#011627,bg=#011627,nobold,nounderscore,noitalics]'
+setw -g window-status-current-format '#[fg=#011627,bg=#FFFFFF]#[fg=#b58900,bg=#FFFFFF] #I #[fg=#FFFFFF,bg=#b58900] #{b:pane_current_path} #[fg=#b58900,bg=#011627,nobold]'
