--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,4 +1,3 @@
-import = ["~/.config/alacritty/themes/night_owl.toml"]
 
 [env]
 TERM = "xterm-256color"
@@ -18,3 +17,6 @@ option_as_alt = "OnlyLeft"
 normal = { family = "JetBrainsMono Nerd Font", style = "Medium" }
 
 size = 16
+
+[general]
+import = ["~/.config/alacritty/themes/night_owl.toml"]
