--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -14,7 +14,8 @@ blur = true
 option_as_alt = "OnlyLeft"
 
 [font]
-normal = { family = "JetBrainsMono Nerd Font", style = "Medium" }
+# normal = { family = "JetBrainsMono Nerd Font", style = "Medium" }
+normal = { family = "BlexMono Nerd Font Propo", style = "Medium" }
 
 size = 16
 
