--- a/obsidianmd_appearance_config/settings.json
+++ b/obsidianmd_appearance_config/settings.json
@@ -27,7 +27,7 @@
   "anuppuccin-theme-settings@@anp-cursor": "pointer",
   "anuppuccin-theme-settings@@anp-toggle-scrollbars": true,
   "anuppuccin-theme-settings@@anp-editor-font-source": "\"\"",
-  "anuppuccin-theme-settings@@anp-editor-font-lp": "\"JetBrainsMono Nerd Font\"",
+  "anuppuccin-theme-settings@@anp-editor-font-lp": "\"BlexMono Nerd Font Propo\"",
   "anuppuccin-theme-settings@@bold-weight": "700",
   "anuppuccin-theme-settings@@anp-font-live-preview-wt": "400",
   "anuppuccin-theme-settings@@anp-header-color-toggle": true,
