--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -79,12 +79,13 @@ set -g set-titles on
 set -g set-titles-string "#T"
 
 set -g @plugin 'tmux-plugins/tpm'
+
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-# set -g @plugin 'jsec/tmux-night-owl'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
-run '~/.config/tmux/tpm/tpm'
 
 # set vi-mode
 set-window-option -g mode-keys vi
@@ -97,3 +98,4 @@ bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
 source ~/.config/tmux/statusline.conf
+run '~/.config/tmux/tpm/tpm'
