--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -231,4 +231,9 @@ run = 'move-node-to-workspace S'
 
 [[on-window-detected]]
 if.app-id = 'md.obsidian'
+# this is '-oh' not zero 
 run = 'move-node-to-workspace O'
+
+[[on-window-detected]]
+if.app-id = 'ru.keepcoder.Telegram'
+run = 'move-node-to-workspace 1'
