--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -129,7 +129,7 @@ alt-5 = 'workspace 5'
 # alt-8 = 'workspace 8'
 # alt-9 = 'workspace 9'
 alt-a = 'workspace A' # In your config, you can drop workspace bindings that you don't need
-alt-b = 'workspace B'
+# alt-b = 'workspace B'
 alt-c = 'workspace C'
 # alt-d = 'workspace D'
 # alt-e = 'workspace E'
