(aerospace): made the move to zen browser

--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -221,7 +221,7 @@ if.app-id = 'org.alacritty'
 run = 'move-node-to-workspace T' # mnemonics T - Terminal
 
 [[on-window-detected]]
-if.app-id = 'company.thebrowser.Browser'
+if.app-id = 'app.zen-browser.zen'
 run = 'move-node-to-workspace A'
 
 [[on-window-detected]]
