--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,42 @@
-./iterm2/
-./gh/
-./yarn/
-./nvim.bak/
-./raycast/
-./zed/
-./thefuck/
-./neofetch/
-./rstudio/
-./btop/
-./configstore/
+# ───────────────────────────────
+# Local app / tool configurations
+# ───────────────────────────────
+iterm2/
+gh/
+nvim.bak/
+raycast/
+thefuck/
+neofetch/
+rstudio/
+btop/
+configstore/
 
-#compiled lua sources
+# ───────────────────────────────
+# Lua / Luarocks
+# ───────────────────────────────
 luac.out
-
-# luarocks build files
 *.src.rock
 *.zip
 *.tar.gz
 
-# Object files
+# ───────────────────────────────
+# Compiled object files
+# ───────────────────────────────
 *.o
 *.os
 *.ko
 *.obj
 *.elf
 
-# Precompiled Headers
+# ───────────────────────────────
+# Precompiled headers
+# ───────────────────────────────
 *.gch
 *.pch
 
+# ───────────────────────────────
 # Libraries
+# ───────────────────────────────
 *.lib
 *.a
 *.la
@@ -37,13 +44,17 @@ luac.out
 *.def
 *.exp
 
-# Shared objects (inc. Windows DLLs)
+# ───────────────────────────────
+# Shared objects / DLLs
+# ───────────────────────────────
 *.dll
 *.so
 *.so.*
 *.dylib
 
+# ───────────────────────────────
 # Executables
+# ───────────────────────────────
 *.exe
 *.out
 *.app
@@ -51,5 +62,7 @@ luac.out
 *.x86_64
 *.hex
 
-
+# ───────────────────────────────
+# Neovim / Plugins
+# ───────────────────────────────
 plugin/packer_compiled.lua
