--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -8,7 +8,8 @@ padding.y = 10
 
 decorations = "buttonless"
 
-opacity = 0.5
+# opacity = 0.5
+opacity = 0.825
 blur = true
 
 option_as_alt = "OnlyLeft"
