--- a/obsidianmd_appearance_config/settings.json
+++ b/obsidianmd_appearance_config/settings.json
@@ -1,88 +1,122 @@
 {
-  "anuppuccin-theme-settings@@anuppuccin-theme-light": "ctp-rosepine-light",
-  "anuppuccin-theme-settings@@anuppuccin-theme-dark": "ctp-frappe",
-  "anuppuccin-theme-settings@@anuppuccin-light-theme-accents": "ctp-accent-light-mauve",
-  "anuppuccin-theme-settings@@anuppuccin-theme-accents": "ctp-accent-mauve",
-  "anuppuccin-theme-settings@@anuppuccin-accent-toggle": true,
-
-  "anuppuccin-theme-settings@@ctp-custom-peach@@light": "#F78C6C",
-  "anuppuccin-theme-settings@@ctp-custom-teal@@dark": "#11B7C5",
-  "anuppuccin-theme-settings@@ctp-custom-teal@@light": "#5A4B81",
-  "anuppuccin-theme-settings@@ctp-custom-subtext1@@light": "#637777",
-  "anuppuccin-theme-settings@@ctp-custom-subtext0@@dark": "#FB35D8",
-  "anuppuccin-theme-settings@@ctp-custom-subtext0@@light": "#5A4B81",
-
-  "anuppuccin-theme-settings@@ctp-custom-overlay2@@dark": "#0AD1D0",
-  "anuppuccin-theme-settings@@ctp-custom-overlay2@@light": "#90A4AE",
-  "anuppuccin-theme-settings@@ctp-custom-overlay1@@dark": "#FFA600",
-  "anuppuccin-theme-settings@@ctp-custom-overlay1@@light": "#B0BEC5",
-  "anuppuccin-theme-settings@@ctp-custom-overlay0@@dark": "#4CFFD2",
-  "anuppuccin-theme-settings@@ctp-custom-overlay0@@light": "#5A4B81",
-
-  "anuppuccin-theme-settings@@anp-active-line": "anp-no-highlight",
-  "anuppuccin-theme-settings@@anp-callout-select": "anp-callout-sleek",
-  "anuppuccin-theme-settings@@anp-callout-color-toggle": true,
-  "anuppuccin-theme-settings@@anp-custom-checkboxes": true,
-  "anuppuccin-theme-settings@@anp-speech-bubble": true,
-
-  "anuppuccin-theme-settings@@tag-radius": 2,
-  "anuppuccin-theme-settings@@cards-border-width": "4px",
-  "anuppuccin-theme-settings@@anp-color-transition-toggle": true,
-  "anuppuccin-theme-settings@@anp-cursor": "pointer",
-  "anuppuccin-theme-settings@@anp-toggle-scrollbars": true,
-
-  "anuppuccin-theme-settings@@anp-editor-font-source": "\"\"",
-  "anuppuccin-theme-settings@@anp-editor-font-lp": "\"BlexMono Nerd Font Propo\"",
-  "anuppuccin-theme-settings@@bold-weight": "700",
-  "anuppuccin-theme-settings@@anp-font-live-preview-wt": "400",
-
-  "anuppuccin-theme-settings@@anp-header-color-toggle": true,
-  "anuppuccin-theme-settings@@anp-header-divider-color-toggle": true,
-  "anuppuccin-theme-settings@@h1-weight": 900,
-  "anuppuccin-theme-settings@@h1-line-height": 1.2,
-  "anuppuccin-theme-settings@@anp-h1-divider": true,
-
-  "anuppuccin-theme-settings@@h2-size": 1.9,
-  "anuppuccin-theme-settings@@h2-weight": 700,
-  "anuppuccin-theme-settings@@h3-size": 1.6,
-  "anuppuccin-theme-settings@@h3-weight": 700,
-  "anuppuccin-theme-settings@@anp-h3-color-custom": "anp-h3-mauve",
-
-  "anuppuccin-theme-settings@@h4-weight": 500,
-  "anuppuccin-theme-settings@@h5-weight": 500,
-  "anuppuccin-theme-settings@@h6-size": 1.1,
-  "anuppuccin-theme-settings@@h6-weight": 500,
-
-  "anuppuccin-theme-settings@@anp-decoration-toggle": true,
-  "anuppuccin-theme-settings@@anp-colorful-frame": true,
-  "anuppuccin-theme-settings@@anp-colorful-frame-opacity": 1,
-
-  "anuppuccin-theme-settings@@anp-file-icons": true,
-  "anuppuccin-theme-settings@@anp-file-label-align": "0",
-  "anuppuccin-theme-settings@@anp-alt-rainbow-style": "anp-full-rainbow-color-toggle",
-  "anuppuccin-theme-settings@@anp-rainbow-file-toggle": true,
-  "anuppuccin-theme-settings@@anp-rainbow-folder-bg-opacity": 0.9,
-  "anuppuccin-theme-settings@@anp-simple-rainbow-title-toggle": true,
-  "anuppuccin-theme-settings@@anp-simple-rainbow-indentation-toggle": true,
-
-  "anuppuccin-theme-settings@@anp-stacked-header-width": 30,
-  "anuppuccin-theme-settings@@anp-alt-tab-style": "anp-safari-tab-toggle",
-  "anuppuccin-theme-settings@@anp-alt-tab-custom-height": 40,
-  "anuppuccin-theme-settings@@anp-disable-newtab-align": true,
-
-  "anuppuccin-theme-settings@@anp-depth-tab-opacity": 0.6,
-  "anuppuccin-theme-settings@@anp-depth-tab-gap": 10,
-  "anuppuccin-theme-settings@@anp-safari-tab-radius": 5,
-  "anuppuccin-theme-settings@@anp-safari-tab-gap": 3,
-  "anuppuccin-theme-settings@@anp-safari-tab-animated": true,
-
-  "anuppuccin-theme-settings@@anp-layout-select": "anp-card-layout",
-  "anuppuccin-theme-settings@@anp-card-radius": 8,
-  "anuppuccin-theme-settings@@anp-card-layout-padding": 1,
-  "anuppuccin-theme-settings@@anp-card-shadows": true,
-  "anuppuccin-theme-settings@@anp-card-layout-actions": true,
-  "anuppuccin-theme-settings@@anp-card-layout-filebrowser": true,
-
-  "anuppuccin-theme-settings@@anp-border-radius": 16,
-  "anuppuccin-theme-settings@@anp-border-padding": 20
+  "minimal-style@@h1-size": "1.8em",
+  "minimal-style@@h2-size": "1.4em",
+  "minimal-style@@h3-size": "1.2em",
+  "minimal-style@@h4-size": "1.1em",
+  "minimal-style@@h5-size": "1.1em",
+  "minimal-style@@h6-size": "1.1em",
+  "minimal-style@@h1-l": false,
+  "minimal-style@@window-title-off": false,
+  "minimal-style@@ig-adjust-edit": -1,
+  "minimal-style@@list-spacing": 0.195,
+  "minimal-style@@h1-color@@dark": "#2D8EC7",
+  "minimal-style@@h1-color@@light": "#2D8EC7",
+  "minimal-style@@h2-color@@light": "#2D8EC7",
+  "minimal-style@@h2-color@@dark": "#2DB7D6",
+  "minimal-style@@h3-color@@light": "#2DB7D6",
+  "minimal-style@@h3-color@@dark": "#2DB7D6",
+  "minimal-style@@h4-color@@light": "#2DB7D6",
+  "minimal-style@@h4-color@@dark": "#2DB7D6",
+  "minimal-style@@h5-color@@light": "#59A2C5",
+  "minimal-style@@h5-color@@dark": "#59A2C5",
+  "minimal-style@@h6-color@@light": "#59A2C5",
+  "minimal-style@@h6-color@@dark": "#59A2C5",
+  "minimal-style@@bg1@@dark": "#1e1e2e",
+  "minimal-style@@bg2@@dark": "#313244",
+  "minimal-style@@link-external-color@@dark": "#59A2C5",
+  "minimal-style@@link-external-color-hover@@dark": "#4B6F9A",
+  "minimal-style@@h2-weight": 500,
+  "minimal-style@@h3-weight": 500,
+  "minimal-style@@h1-weight": 500,
+  "minimal-style@@link-color-hover@@dark": "#4B6F9A",
+  "minimal-style@@link-color@@dark": "#59A2C5",
+  "minimal-style@@ax2@@dark": "#4B6F9A",
+  "minimal-style@@ax3@@dark": "#34547B",
+  "minimal-style@@ax1@@dark": "#59A2C5",
+  "minimal-style@@checkbox-shape": "checkbox-circle",
+  "Appearance-dark@@theme-dark-style-select": "theme-dark-background-darker",
+  "Appearance-dark@@accent-color-override-dark": true,
+  "Appearance-light@@accent-color-override-light": false,
+  "Appearance-light@@card-layout-open-light": true,
+  "Appearance-dark@@card-layout-open-dark": true,
+  "Editor@@line-hover-indicator": true,
+  "Appearance-dark@@accent-dark": "#2D8EC7",
+  "Appearance-dark@@color-red-rgb@@dark": "#FB464C",
+  "Appearance-dark@@color-orange-rgb@@dark": "#E9973F",
+  "Appearance-dark@@color-yellow-rgb@@dark": "#E0DE71",
+  "Appearance-dark@@color-green-rgb@@dark": "#44CF6E",
+  "Appearance-dark@@color-cyan-rgb@@dark": "#53DFDD",
+  "Appearance-dark@@color-blue-rgb@@dark": "#027AFF",
+  "Appearance-dark@@color-purple-rgb@@dark": "#A882FF",
+  "Appearance-dark@@color-pink-rgb@@dark": "#FA99CD",
+  "Appearance-dark@@on-border-dark": "#BABABA",
+  "Appearance-dark@@background-primary@@dark": "#1e1e2e",
+  "Appearance-dark@@background-primary-alt@@dark": "#181825",
+  "Appearance-dark@@background-secondary@@dark": "#313244",
+  "Appearance-dark@@background-secondary-alt@@dark": "#45475a",
+  "Appearance-dark@@background-tertiary@@dark": "#313244",
+  "Appearance-dark@@workspace-background-translucent@@dark": "#1e1e2e99",
+  "Appearance-dark@@background-modifier-hover@@dark": "#45475a22",
+  "Appearance-dark@@background-modifier-border-hover@@dark": "#3f3f3f",
+  "Appearance-dark@@background-modifier-border-focus@@dark": "#555555",
+  "Appearance-dark@@text-normal@@dark": "#cdd6f4",
+  "Appearance-dark@@text-muted@@dark": "#a6adc8",
+  "Appearance-dark@@text-faint@@dark": "#838ba7",
+  "Appearance-dark@@interactive-normal@@dark": "#313244",
+  "Appearance-dark@@interactive-hover@@dark": "#45475a",
+  "Appearance-dark@@background-activated-tab-header-dark": "#45475a22",
+  "Appearance-dark@@shadow-activated-tab-header-dark": "none",
+  "Editor@@italic-color@@dark": "#D9D9D9",
+  "Appearance-light@@link-external-color@@light": "#43B7D6",
+  "Appearance-light@@link-external-color-hover@@light": "#2D8EC7",
+  "Appearance-dark@@link-external-color-hover@@dark": "#2D8EC7",
+  "Appearance-dark@@link-external-color@@dark": "#43B7D6",
+  "Editor@@link-color@@dark": "#43B7D6",
+  "Editor@@link-color-hover@@dark": "#2D8EC7",
+  "Editor@@link-unresolved-color@@dark": "#DF1C1C",
+  "Editor@@link-unresolved-decoration-color@@dark": "#DF1C1C",
+  "Editor@@link-external-color@@dark": "#43B7D6",
+  "Editor@@link-external-color-hover@@dark": "#2D8EC7",
+  "Editor@@h1-color-select": "h1-color-designated",
+  "Editor@@h2-color-select": "h2-color-designated",
+  "Editor@@h3-color-select": "h3-color-designated",
+  "Editor@@h4-color-select": "h4-color-designated",
+  "Editor@@h5-color-select": "h5-color-designated",
+  "Editor@@h6-color-select": "h6-color-designated",
+  "Editor@@h1-divider-on": false,
+  "Editor@@h2-divider-on": false,
+  "Editor@@h2-size": "1.5em",
+  "Editor@@h2-weight": 650,
+  "Editor@@h3-weight": 625,
+  "Components@@CTA-BTN-enable": true,
+  "Editor@@heading-indicator-off": true,
+  "Components@@tab-autohide": false,
+  "Components@@status-bar-autohide": false,
+  "Components@@Ribbon-autohide": false,
+  "Components@@nav-header-autohide": false,
+  "Components@@tab-title-bar-autohide": false,
+  "Components@@folder-font-bold": true,
+  "Components@@outline-enhanced": false,
+  "Mobile@@card-layout-pad-open": true,
+  "Mobile@@drawer-phone-full-width": false,
+  "Plugin@@Projects-bg-color": "Projects-bg-color-default",
+  "Components@@colorful-folder": false,
+  "Editor@@bold-color@@dark": "#D9D9D9",
+  "Editor@@codeblock-style-select": "codeblock-style-one-dark",
+  "Components@@file-icon-remove": true,
+  "Editor@@h1-size": "1.6em",
+  "Editor@@h3-size": "1.4em",
+  "Editor@@h4-size": "1.3em",
+  "Editor@@h6-size": "1.15em",
+  "Editor@@inline-title-color-select": "inline-title-color-customized",
+  "Editor@@inline-title-color@@dark": "#2DB7D6",
+  "Editor@@h5-size": "1.25em",
+  "Editor@@embed-font-style": "\"\"",
+  "Editor@@h1-accent-color@@dark": "#2DB7D6",
+  "Editor@@h2-accent-color@@dark": "#37B7DF",
+  "Editor@@h3-accent-color@@dark": "#4E9BB5",
+  "Editor@@h4-accent-color@@dark": "#59A2C5",
+  "Editor@@h5-accent-color@@dark": "#59A2C5",
+  "Editor@@h6-accent-color@@dark": "#59A2C5",
+  "Editor@@callout-title-size": "\"\""
 }
