--- a/obsidianmd_appearance_config/settings.json
+++ b/obsidianmd_appearance_config/settings.json
@@ -9,30 +9,30 @@
   "minimal-style@@window-title-off": false,
   "minimal-style@@ig-adjust-edit": -1,
   "minimal-style@@list-spacing": 0.195,
-  "minimal-style@@h1-color@@dark": "#2D8EC7",
-  "minimal-style@@h1-color@@light": "#2D8EC7",
-  "minimal-style@@h2-color@@light": "#2D8EC7",
-  "minimal-style@@h2-color@@dark": "#2DB7D6",
-  "minimal-style@@h3-color@@light": "#2DB7D6",
-  "minimal-style@@h3-color@@dark": "#2DB7D6",
-  "minimal-style@@h4-color@@light": "#2DB7D6",
-  "minimal-style@@h4-color@@dark": "#2DB7D6",
-  "minimal-style@@h5-color@@light": "#59A2C5",
-  "minimal-style@@h5-color@@dark": "#59A2C5",
-  "minimal-style@@h6-color@@light": "#59A2C5",
-  "minimal-style@@h6-color@@dark": "#59A2C5",
+  "minimal-style@@h1-color@@dark": "#B892FF",
+  "minimal-style@@h1-color@@light": "#B892FF",
+  "minimal-style@@h2-color@@light": "#CBA6F7",
+  "minimal-style@@h2-color@@dark": "#CBA6F7",
+  "minimal-style@@h3-color@@light": "#DDB6F2",
+  "minimal-style@@h3-color@@dark": "#DDB6F2",
+  "minimal-style@@h4-color@@light": "#C4A7E7",
+  "minimal-style@@h4-color@@dark": "#C4A7E7",
+  "minimal-style@@h5-color@@light": "#C4A7E7",
+  "minimal-style@@h5-color@@dark": "#C4A7E7",
+  "minimal-style@@h6-color@@light": "#C4A7E7",
+  "minimal-style@@h6-color@@dark": "#C4A7E7",
   "minimal-style@@bg1@@dark": "#1e1e2e",
   "minimal-style@@bg2@@dark": "#313244",
-  "minimal-style@@link-external-color@@dark": "#59A2C5",
-  "minimal-style@@link-external-color-hover@@dark": "#4B6F9A",
+  "minimal-style@@link-external-color@@dark": "#CBA6F7",
+  "minimal-style@@link-external-color-hover@@dark": "#A06CD5",
   "minimal-style@@h2-weight": 500,
   "minimal-style@@h3-weight": 500,
   "minimal-style@@h1-weight": 500,
-  "minimal-style@@link-color-hover@@dark": "#4B6F9A",
-  "minimal-style@@link-color@@dark": "#59A2C5",
-  "minimal-style@@ax2@@dark": "#4B6F9A",
-  "minimal-style@@ax3@@dark": "#34547B",
-  "minimal-style@@ax1@@dark": "#59A2C5",
+  "minimal-style@@link-color-hover@@dark": "#A06CD5",
+  "minimal-style@@link-color@@dark": "#B892FF",
+  "minimal-style@@ax2@@dark": "#A06CD5",
+  "minimal-style@@ax3@@dark": "#8F6ADB",
+  "minimal-style@@ax1@@dark": "#CBA6F7",
   "minimal-style@@checkbox-shape": "checkbox-circle",
   "Appearance-dark@@theme-dark-style-select": "theme-dark-background-darker",
   "Appearance-dark@@accent-color-override-dark": true,
@@ -40,15 +40,15 @@
   "Appearance-light@@card-layout-open-light": true,
   "Appearance-dark@@card-layout-open-dark": true,
   "Editor@@line-hover-indicator": true,
-  "Appearance-dark@@accent-dark": "#2D8EC7",
+  "Appearance-dark@@accent-dark": "#CBA6F7",
   "Appearance-dark@@color-red-rgb@@dark": "#FB464C",
   "Appearance-dark@@color-orange-rgb@@dark": "#E9973F",
   "Appearance-dark@@color-yellow-rgb@@dark": "#E0DE71",
   "Appearance-dark@@color-green-rgb@@dark": "#44CF6E",
-  "Appearance-dark@@color-cyan-rgb@@dark": "#53DFDD",
-  "Appearance-dark@@color-blue-rgb@@dark": "#027AFF",
-  "Appearance-dark@@color-purple-rgb@@dark": "#A882FF",
-  "Appearance-dark@@color-pink-rgb@@dark": "#FA99CD",
+  "Appearance-dark@@color-cyan-rgb@@dark": "#89DCEB",
+  "Appearance-dark@@color-blue-rgb@@dark": "#89B4FA",
+  "Appearance-dark@@color-purple-rgb@@dark": "#CBA6F7",
+  "Appearance-dark@@color-pink-rgb@@dark": "#F5C2E7",
   "Appearance-dark@@on-border-dark": "#BABABA",
   "Appearance-dark@@background-primary@@dark": "#1e1e2e",
   "Appearance-dark@@background-primary-alt@@dark": "#181825",
@@ -67,16 +67,16 @@
   "Appearance-dark@@background-activated-tab-header-dark": "#45475a22",
   "Appearance-dark@@shadow-activated-tab-header-dark": "none",
   "Editor@@italic-color@@dark": "#D9D9D9",
-  "Appearance-light@@link-external-color@@light": "#43B7D6",
-  "Appearance-light@@link-external-color-hover@@light": "#2D8EC7",
-  "Appearance-dark@@link-external-color-hover@@dark": "#2D8EC7",
-  "Appearance-dark@@link-external-color@@dark": "#43B7D6",
-  "Editor@@link-color@@dark": "#43B7D6",
-  "Editor@@link-color-hover@@dark": "#2D8EC7",
+  "Appearance-light@@link-external-color@@light": "#CBA6F7",
+  "Appearance-light@@link-external-color-hover@@light": "#A06CD5",
+  "Appearance-dark@@link-external-color-hover@@dark": "#A06CD5",
+  "Appearance-dark@@link-external-color@@dark": "#CBA6F7",
+  "Editor@@link-color@@dark": "#CBA6F7",
+  "Editor@@link-color-hover@@dark": "#A06CD5",
   "Editor@@link-unresolved-color@@dark": "#DF1C1C",
   "Editor@@link-unresolved-decoration-color@@dark": "#DF1C1C",
-  "Editor@@link-external-color@@dark": "#43B7D6",
-  "Editor@@link-external-color-hover@@dark": "#2D8EC7",
+  "Editor@@link-external-color@@dark": "#CBA6F7",
+  "Editor@@link-external-color-hover@@dark": "#A06CD5",
   "Editor@@h1-color-select": "h1-color-designated",
   "Editor@@h2-color-select": "h2-color-designated",
   "Editor@@h3-color-select": "h3-color-designated",
@@ -109,14 +109,14 @@
   "Editor@@h4-size": "1.3em",
   "Editor@@h6-size": "1.15em",
   "Editor@@inline-title-color-select": "inline-title-color-customized",
-  "Editor@@inline-title-color@@dark": "#2DB7D6",
+  "Editor@@inline-title-color@@dark": "#FFFFFF",
   "Editor@@h5-size": "1.25em",
   "Editor@@embed-font-style": "\"\"",
-  "Editor@@h1-accent-color@@dark": "#2DB7D6",
-  "Editor@@h2-accent-color@@dark": "#37B7DF",
-  "Editor@@h3-accent-color@@dark": "#4E9BB5",
-  "Editor@@h4-accent-color@@dark": "#59A2C5",
-  "Editor@@h5-accent-color@@dark": "#59A2C5",
-  "Editor@@h6-accent-color@@dark": "#59A2C5",
+  "Editor@@h1-accent-color@@dark": "#CBA6F7",
+  "Editor@@h2-accent-color@@dark": "#DDB6F2",
+  "Editor@@h3-accent-color@@dark": "#C4A7E7",
+  "Editor@@h4-accent-color@@dark": "#B892FF",
+  "Editor@@h5-accent-color@@dark": "#B892FF",
+  "Editor@@h6-accent-color@@dark": "#B892FF",
   "Editor@@callout-title-size": "\"\""
 }
